# buxton

./: .gitignore  AUTHORS  Doxyfile  HACKING  Makefile.am  README  TODO  autogen.sh  check_db_clean  configure.ac
data/: buxton.conf  buxton.conf.in  buxton.pc.in  buxton.service.in  buxton.socket.in  libbuxton-simp.pc.in  libbuxtonsimple.pc.in
demo/: gtk_client.c  gtk_client.h  hellocreategroup.c  helloget.c  hellogetkeytype.c  hellonotify.c  hellonotifysimple.c  helloremovegroup.c  helloset.c  hellosetlabel.c  hellosimple.c  hellounset.c  lbuxton-simp_test.c  notifytest.c  timing.c
docs/: LICENSE.MIT  buxton-api.7  buxton-protocol.7  buxton-security.7  buxton-simp-api.7  buxton.7  buxton.conf.5  buxton_client_handle_response.3  buxton_close.3  buxton_create_group.3  buxton_get_key_type.3  buxton_get_value.3  buxton_key_create.3  buxton_key_get_name.3  buxton_list_names.3  buxton_open.3  buxton_register_notification.3  buxton_remove_group.3  buxton_response_list_name.3  buxton_response_status.3  buxton_response_type.3  buxton_set_conf_file.3  buxton_set_label.3  buxton_set_value.3  buxton_unregister_notification.3  buxton_unset_value.3  buxtonctl.1  buxtond.8  buxtond_get_bool.3  buxtond_get_int32.3  buxtond_remove_group.3  buxtond_set_group.3  buxtond_set_int32.3  buxtond_set_string.3  buxtonsimple-api.7  sbuxton_get_fd.3  sbuxton_get_float.3  sbuxton_get_int32.3  sbuxton_handle_response.3  sbuxton_register_notify.3  (+5 more)
packaging/: buxton-simp.manifest  buxton-simp.spec  buxton.spec  output.txt  tizen.conf
src/cli/: client.c  client.h  main.c
src/core/: daemon.c  daemon.h  main.c
src/db/: gdbm.c  memory.c
src/include/: bt-daemon-private.h  bt-daemon.h  buxton-array.h  buxton-simp.h  buxton.h  buxtonsimple.h
src/libbuxton/: lbuxton.c  lbuxton.sym
src/libbuxton-simp/: buxton_simp  lbuxton-simp.c  lbuxton-simp.h  lbuxton-simp.sym  lbuxton-simp_test.c
src/libbuxtonsimple/: lbuxtonsimple.c  lbuxtonsimple.sym  simple_test.c
src/security/: smack.c  smack.h
src/shared/: array.c  array.h  backend.c  backend.h  bt-daemon-private.h  buxton-simp-internals.c  buxtonarray.c  buxtonarray.h  buxtonclient.h  buxtondata.h  buxtonhashmap.c  buxtonhashmap.h  buxtonkey.h  buxtonlist.c  buxtonlist.h  buxtonmap.c  buxtonmap.h  buxtonresponse.h  buxtonsimple-internals.c  buxtonsimple-internals.h  buxtonstring.h  client.c  client.h  configurator.c  configurator.h  constants.c.in  constants.h  daemon.c  daemon.h  dictionary.c  dictionary.h  direct.c  direct.h  hashmap.c  hashmap.h  iniparser.c  iniparser.h  list.h  log.c  log.h  (+11 more)
test/: check_buxton.c  check_buxton_api.c  check_buxton_array.c  check_buxton_hashmap.c  check_buxton_list.c  check_buxtonsimple.c  check_configurator.c  check_daemon.c  check_shared_lib.c  check_smack.c  check_utils.c  check_utils.h  test-configurator.conf  test-fail.ini.in  test-pass.ini.in  test.conf  test.conf.in  test.load2
